--- a/index.html
+++ b/index.html
@@ -2,66 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matrix App</title>
-
-    <style>
-        .mInput {
-
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 5px;
-            margin: 5px;
-            display: inline-block
-        }
-
-        .hidden {
-            visibility: hidden;
-        }
-    </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <title>Matix App</title>
 </head>
 
 <body>
-    <h1>
-        Matrix App
-    </h1>
+    <div class="container">
+        <div id="form">
+            <h1 class="heading">Matrix Calculator</h1>
+            <form onsubmit="start(); return false">
+                <input type="number" min="2" id="input1" required>
+                x
+                <input type="number" min="2" id="input2" required>
+                <button type="submit">Start</button>
+            </form>
+        </div>
 
-    <form onsubmit="start(); return false">
+        <br />
+        <br />
 
-        <input type="number" required min="2" id="input1">
-        X
-        <input type="number" required min="2" id="input2">
-        <button type="submit">Start</button>
-        <div id="message"></div>
-    </form>
-
-    <br>
-    <br>
-
-    <!-- Matrix input form -->
-    <form onsubmit="sum(); return false" class="hidden" id="metrixInputForm">
-
-        <div id="mInput1" class="mInput"></div>
-        +
-        <div id="mInput2" class="mInput"></div>
-
-        <select id="drop_down" required>
-            <option value="+" id="op1">+</option>
-            <option value="-" id="op2">-</option>
-            <option value="x" id="op3">x</option>
-        </select>
-        <button>Submit</button>
-
-        <div id="mResult" class="mInput"></div>
-
-    </form>
-
-
+        <!-- Get Matrix Value Input -->
+        <form onsubmit="Calculate(); return false" class="hidden" id="metrixInputForm">
+            <div class="twoInp">
+                <div id="matInp1" class="mInput"></div>
+                <div id="matInp2" class="mInput"></div>
+            </div>
+            <select id="ddOptions" required>
+                <option value="+">Addition + </option>
+                <option value="-">Subtraction - </option>
+                <option value="*">Multiplication x </option>
+            </select>
+            <button type="submit">Calculate</button>
+            <div id="matResult" class="mInput"></div>
+        </form>
+    </div>
     <script src="script.js"></script>
-
-
 </body>
 
 </html>
